--- a/ggbeat.full.yml
+++ b/ggbeat.full.yml
@@ -91,7 +91,7 @@ output.elasticsearch:
   # Scheme and port can be left out and will be set to the default (http and 9200)
   # In case you specify and additional path, the scheme is required: http://localhost:9200/path
   # IPv6 addresses should always be defined as: https://[2001:db8::1]:9200
-  hosts: ["search-es-prd-prv-kibana-vvkpgb52zwygp65s535prj7xli.us-east-1.es.amazonaws.com:443"]
+  hosts: ["localhost:9200"]
 
   # Set gzip compression level.
   #compression_level: 0
